Sort indices in user action output